# filesystem-api

./: Dockerfile  README.rst  pyproject.toml
.github/workflows/: ci.yaml  version.yaml
.kustomization/: README.rst
.kustomization/components/api/: cm.yaml  deployment.yaml
.kustomization/overlays/prd/configs/: base.yaml
samples/: client.py  jwtoken.py  mtls.py
src/: app.py  wsgi.py
src/api/: filemgr.py  filesystem.py
src/schemas/serializers/: filemgr.py  http.py
src/services/: auth.py  filemgr.py  filesystem.py
src/settings/: env.py  oas.py
src/utils/: __init__.py
tests/: conftest.py
tests/functional/: test_filemgr.py
tests/integration/: conftest.py  test_app.py  test_filemgr.py  test_filesystem.py
tests/unit/: conftest.py  test_filemgr.py  test_filesystem.py  test_utils.py
