[tool.poetry]
name = "filesystem-api"
version = "0.1.1"
description = "A RESTful API for CRUD operations over files in current filesystem."
authors = ["Renato Damas <rena2damas@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "*", from = "src" }
]
homepage = ""
repository = "https://github.com/codectl/filesystem-api"
documentation = ""
keywords = [
    "filesystem-api",
    "file-manager",
    "syncfusion",
    "swagger",
    "openapi",
    "oas3",
    "rest",
    "api",
    "web",
    "flask",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
apispec = "^6.2.0"
apispec-plugins = "^0.2.0"
apispec-ui = "^0.1.4"
flask = "^2.2.3"
flask-cors = "^3.0.10"
flask-restful = "^0.3.9"
gunicorn = "^20.1.0"
impersonation = "^1.1.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
coverage = "^7.2.3"
pre-commit = "^3.3.0"
pytest = "^7.3.0"
pytest-mock = "^3.10.0"

[tool.poetry.urls]
issues = "https://github.com/codectl/filesystem-api/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
